// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch Default 1`] = `
<View
  accessibilityActions={
    Array [
      Object {
        "name": "Toggle",
      },
    ]
  }
  accessibilityLabel="Default Switch"
  accessibilityRole="switch"
  accessibilityState={
    Object {
      "checked": undefined,
      "disabled": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onAccessibilityAction={[Function]}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "borderColor": undefined,
      "borderRadius": undefined,
      "borderWidth": undefined,
      "flexDirection": "row-reverse",
      "minHeight": undefined,
      "minWidth": undefined,
    }
  }
  switchAnimationStyles={
    Object {
      "thumbAnimatedStyle": Object {
        "transform": Array [
          Object {
            "translateX": 0,
          },
        ],
      },
      "trackBackgroundStyle": Object {
        "backgroundColor": "rgba(15, 108, 189, 1)",
      },
    }
  }
>
  <Text
    style={
      Object {
        "color": "#242424",
        "flexShrink": 1,
        "fontFamily": "Segoe UI",
        "fontSize": 13,
        "fontWeight": "400",
        "margin": 0,
      }
    }
  >
    Default Switch
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row-reverse",
      }
    }
  >
    <View
      collapsable={false}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(15, 108, 189, 1)",
          "borderRadius": 100,
          "flexDirection": "row",
          "height": 32,
          "marginRight": 8,
          "width": 52,
        }
      }
    >
      <View
        animationClass="Ribbon_SwitchThumb"
        collapsable={false}
        style={
          Object {
            "backgroundColor": "#ffffff",
            "borderRadius": 100,
            "elevation": 8,
            "height": 26,
            "margin": 3,
            "transform": Array [
              Object {
                "translateX": 0,
              },
            ],
            "width": 26,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`Switch Disabled 1`] = `
<View
  accessibilityActions={
    Array [
      Object {
        "name": "Toggle",
      },
    ]
  }
  accessibilityLabel="Default Switch Disabled"
  accessibilityRole="switch"
  accessibilityState={
    Object {
      "checked": undefined,
      "disabled": true,
    }
  }
  accessible={false}
  collapsable={false}
  focusable={false}
  onAccessibilityAction={[Function]}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "alignSelf": "flex-start",
      "borderColor": undefined,
      "borderRadius": undefined,
      "borderWidth": undefined,
      "flexDirection": "row-reverse",
      "minHeight": undefined,
      "minWidth": undefined,
    }
  }
  switchAnimationStyles={
    Object {
      "thumbAnimatedStyle": Object {
        "transform": Array [
          Object {
            "translateX": 0,
          },
        ],
      },
      "trackBackgroundStyle": Object {
        "backgroundColor": "rgba(240, 240, 240, 1)",
      },
    }
  }
>
  <Text
    style={
      Object {
        "color": "#e0e0e0",
        "flexShrink": 1,
        "fontFamily": "Segoe UI",
        "fontSize": 13,
        "fontWeight": "400",
        "margin": 0,
      }
    }
  >
    Default Switch Disabled
  </Text>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row-reverse",
      }
    }
  >
    <View
      collapsable={false}
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "rgba(240, 240, 240, 1)",
          "borderRadius": 100,
          "flexDirection": "row",
          "height": 32,
          "marginRight": 8,
          "width": 52,
        }
      }
    >
      <View
        animationClass="Ribbon_SwitchThumb"
        collapsable={false}
        style={
          Object {
            "backgroundColor": "#ffffff",
            "borderRadius": 100,
            "elevation": 0,
            "height": 26,
            "margin": 3,
            "transform": Array [
              Object {
                "translateX": 0,
              },
            ],
            "width": 26,
          }
        }
      />
    </View>
  </View>
</View>
`;
